welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: '(' expected but identifier found.
  if num%10<3
     ^